[package]
name = "pmsim"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Porous media simulator"
homepage = "https://github.com/cpmech/pmsim"
repository = "https://github.com/cpmech/pmsim"
documentation = "https://docs.rs/pmsim"
readme = "README.md"
categories = ["mathematics", "science", "simulation"]
keywords = ["mechanics", "fem"]

[dependencies]
plotpy = "0.6"
gemlab = "1.0"
russell_lab = "1.2"
russell_sparse = "1.2"
russell_tensor = "1.2"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
