[package]
name = "pmsim"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Porous media simulator"
homepage = "https://github.com/cpmech/pmsim"
repository = "https://github.com/cpmech/pmsim"
documentation = "https://docs.rs/pmsim"
readme = "README.md"
categories = ["mathematics", "science", "simulation"]
keywords = ["mechanics", "fem"]

[dependencies]
plotpy = { path = "../plotpy" }
gemlab = { path = "../gemlab" }
russell_lab = { path = "../russell/russell_lab", features = ["intel_mkl"] }
russell_ode = { path = "../russell/russell_ode", features = ["intel_mkl"] }
russell_sparse = { path = "../russell/russell_sparse", features = [
  "local_suitesparse",
  "with_mumps",
  "intel_mkl",
] }
russell_tensor = { path = "../russell/russell_tensor", features = [
  "intel_mkl",
] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
